<?xml version="1.0"?>
<package format="2">
  <name>weeding_bot</name>
  <version>0.0.0</version>
  <description>The weeding_bot package</description>


  <maintainer email="neksfiris@gmail.com">Nek</maintainer>

  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
